fixed minor bug with overflow

--- a/src/styles/layout-wrapper.styles.scss
+++ b/src/styles/layout-wrapper.styles.scss
@@ -5,4 +5,7 @@
 
   display: flex;
   flex-direction: column;
+
+  overflow-y: auto;
+  overflow-x: hidden;
 }
